--- a/.github/workflows/python-deployment-workflow.yml
+++ b/.github/workflows/python-deployment-workflow.yml
@@ -2,6 +2,9 @@ name: python-deployment
 
 run-name: ${{ github.actor }} - ${{ github.ref_name }}
 
+env:
+  PythonVersion: 3.8
+
 on: 
   push: 
     branches: ["main", "develop"]
@@ -11,7 +14,26 @@ on:
 jobs:
   python-ci:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
+
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Python ${{ env.PythonVersion }}
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PythonVersion }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          pip install -r requirements.txt
+      - name: Lint with flake8
+        run: |
+          flake8 . --show-source --statistics
+
+
+
 
 
