--- a/.github/workflows/python-deployment-workflow.yml
+++ b/.github/workflows/python-deployment-workflow.yml
@@ -1,6 +1,6 @@
 name: python-deployment
 
-run-name: ${{ github.actor }} - ${{ github.ref_name }}
+run-name: ${{ github.actor }} - ${{ github.ref_name }} - ${{ github.sha }}
 
 env:
   PythonVersion: 3.8
@@ -27,11 +27,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install flake8 pytest
           pip install -r requirements.txt
       - name: Lint with flake8
         run: |
           flake8 . --show-source --statistics
+      - name: Check Complexity
+        run: |
+          cd ../
+          flake8 . --exit-zero --max-complexity=10 --statistics
+
 
 
 
