--- a/.github/workflows/python-deployment-workflow.yml
+++ b/.github/workflows/python-deployment-workflow.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ env.PythonVersion }}
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PythonVersion }}
       - name: Install dependencies
