--- a/.github/workflows/python-deployment-workflow.yml
+++ b/.github/workflows/python-deployment-workflow.yml
@@ -1,53 +1,58 @@
 name: python-deployment
+run-name: ${{ github.actor }} - ${{ github.sha }}
 
-run-name: ${{ github.actor }} - ${{ github.ref_name }} - ${{ github.sha }}
-
-env:
-  PythonVersion: 3.8
-
-on: 
-  push: 
+on:
+  push:
     branches: ["main", "develop"]
   pull_request:
     branches: ["main"]
 
+env:
+  PYTHON_VERSION: 3.8
+
 jobs:
   python-ci:
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: ./src
 
     steps:
-      - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ env.PythonVersion }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PythonVersion }}
+    - uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov
-          pip install -r requirements.txt
+    - uses: actions/setup-python@v5
+      name: Setup Python ${{ env.PYTHON_VERSION }}
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Lint with flake8
-        run: |
-          flake8 . --show-source --statistics
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest pytest-cov
+        pip install -r requirements.txt
 
-      - name: Check Complexity
-        run: |
-          cd ../
-          flake8 . --exit-zero --max-complexity=10 --statistics
+    - name: Lint
+      run: |
+        flake8 . --show-source --statistics
+      continue-on-error: true
 
-      - name: Test with pytest
-        run: |	
-          pytest -v --cov-report=term-missing --cov=. --cov-report=json
+    - name: Check Complexity
+      run: |
+        flake8 . --statistics --max-complexity=10 --exit-zero
+      continue-on-error: true
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: code
-          path: ./src
+    - name: Run unit tests with pytest
+      run: |
+        pytest -v --cov=. --cov-report=term-missing --cov-report=html
 
+    - name: Show coverage report
+      run: |
+        coverage report
+
+    - uses: actions/upload-artifact@v2
+      name: Upload artifact
+      with:
+        name: code
+        path: ./src
