--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,3 +4,10 @@ djangorestframework==3.13.1
 pytz==2022.1
 sqlparse==0.4.4
 mysql-connector-python==8.2.0
+pytest==7.1.3
+pytest-django==4.8.0
+flake8==5.0.4
+autopep8==1.6.0
+isort==5.10.1
+black==22.8.0
+coverage==6.4.1
